<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:weightSum="10"
    tools:context=".LandingPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="4" >
        <ImageView
            android:contentDescription="muteButton"
            android:id="@+id/tohoh"
            android:layout_width="50dp"
            android:paddingEnd="20dp"
            android:paddingLeft="0dp"
            android:layout_height="0dp"
            android:alpha="0.8"
            android:layout_weight="1"
            android:text="@string/game_name"
            android:layout_gravity="end"
            android:src="@drawable/unmute"
            tools:src="@drawable/unmute"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/game_over_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game_name"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="cursive"
            android:textColor="@color/colorPrimary"
            android:textSize="60sp"
            tools:ignore="NestedWeights" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="4"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textSize="30sp" />

        <Button
            android:id="@+id/results_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/results_1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textSize="30sp" />

    </LinearLayout>


</LinearLayout>